--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,39 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Custom Styles */
+.no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
+
+/* Custom Preloader Styles */
+.bg-preloader-image {
+  background-image: url('./assets/pre.svg');
+}
+
+.transition-opacity {
+  transition: opacity 0.5s ease;
+}
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #2d1950;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(178, 121, 216, 0.959);
+  border-radius: 12px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(222, 130, 235, 0.911);
+  border-radius: 12px;
+}
+
